--- a/conf/distro/tarplite.conf
+++ b/conf/distro/tarplite.conf
@@ -43,7 +43,7 @@ DISTRO_FEATURES:remove := "acl \
                            debuginfod \
                            ext2 \
                            zeroconf \
-                           pcmia \
+                           pcmcia \
                            3g \
                            vfat \
                            ptest \
