more layer dependencies

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -34,7 +34,13 @@ BBFILE_PRIORITY_tarp = "999"
 LAYERVERSION_tarp = "1"
 
 # LAYERDEPENDS: Lists all layers on which this layer depends (if any).
+# The following layers are all from the openembedded layer repo.
 LAYERDEPENDS_tarp  += "openembedded-layer"
+LAYERDEPENDS_tarp  += "meta-python"
+LAYERDEPENDS_tarp  += "networking-layer"
+LAYERDEPENDS_tarp  += "filesystems-layer"
+LAYERDEPENDS_tarp  += "webserver"
+LAYERDEPENDS_tarp  += "virtualization-layer"
 
 # LAYERSERIES_COMPAT: Lists the Yocto Project releases for which the current
 # version is compatible. This variable is a good way to indicate if your
