--- a/local-conf/rpi4b_minimal.conf
+++ b/local-conf/rpi4b_minimal.conf
@@ -288,8 +288,11 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
 
-PARALLEL_MAKE := "-j32"
-BB_NUMBER_THREADS := "32"
+# Use weak assignment here; taken them from e.g. auto.conf instead
+# if specified there.
+PARALLEL_MAKE ?= "-j32"
+BB_NUMBER_THREADS ?= "32"
+
 IMAGE_FSTYPES := "tar.xz ext3 ext4 squashfs rpi-sdimg"
 
 # Accept commercial licenses; brcm recipes use this license and the rpi4
